@@ -4,6 +4,10 @@
 disabled=false
 
 # the name of the group this storage server belongs to
+#
+# comment or remove this item for fetching from tracker server,
+# in this case, use_storage_id must set to true in tracker.conf,
+# and storage_ids.conf must be configed correctly.
 group_name=group1
 
 # bind an address of this host
