@@ -60,6 +60,9 @@ FDFSStorageIdInfo *fdfs_get_storage_by_id(const char *id);
 FDFSStorageIdInfo *fdfs_get_storage_id_by_ip(const char *group_name, \
 		const char *pIpAddr);
 
+FDFSStorageIdInfo *fdfs_get_storage_id_by_ip_port(const char *pIpAddr,
+        const int port);
+
 int fdfs_check_storage_id(const char *group_name, const char *id);
 
 int fdfs_get_storage_ids_from_tracker_server(ConnectionInfo *pTrackerServer);
